--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1573,14 +1573,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "vC02WpGHPj29"
       },
       "outputs": [],
       "source": [
         "# column names are text data, so use quotes to save them in a variable.\n",
-        "p14 = \"...\""
+        "p14 = \"Sex\""
       ]
     },
     {
@@ -1600,7 +1600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "7S2Atlb8vhef"
       },
@@ -1611,7 +1611,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "qIn2S-FkvXKU"
       },
@@ -1622,7 +1622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "qdJmwZCZvb-Y"
       },
@@ -1633,11 +1633,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "1GNNJ3BDvkNf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([1, 3, 8, 6])"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "q15b"
       ]
@@ -1653,7 +1664,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "HSUilNtswGgy"
       },
@@ -1664,22 +1675,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "HTQ2TqxRwJAJ"
       },
       "outputs": [],
       "source": [
-        "p15 = ..."
+        "p15 = np.array(q15c)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "e55ZY-9MwQqC"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([2, 3, 5, 9])"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p15"
       ]
