--- a/homework.ipynb
+++ b/homework.ipynb
@@ -307,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "XA7DgtLYWq9G"
       },
@@ -324,15 +324,14 @@
       },
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'p3' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp3\u001b[49m\n",
-            "\u001b[31mNameError\u001b[39m: name 'p3' is not defined"
-          ]
+          "data": {
+            "text/plain": [
+              "2.3333333333333335"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1105,7 +1104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 12,
       "metadata": {
         "id": "WlSYjSwkNtSw"
       },
@@ -1864,7 +1863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "3Td9iwXAyCRN"
       },
@@ -1879,9 +1878,30 @@
       "metadata": {
         "id": "Tx4PYPDkyEwD"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[50.41,\n",
+              " 34.81,\n",
+              " 64.0,\n",
+              " 68.89000000000001,\n",
+              " 65.61,\n",
+              " 0.09,\n",
+              " 37.209999999999994,\n",
+              " 49.0,\n",
+              " 49.0,\n",
+              " 23.04]"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "..."
+        "p18=[x**2 for x in q18]\n",
+        "p18"
       ]
     },
     {
@@ -1897,7 +1917,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "0AGWoBZDyn3j"
       },
@@ -1908,13 +1928,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "dzrWIEdAyo0m"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1692.3460000000002"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "..."
+        "p19=sum([x**3 for x in q19])\n",
+        "p19"
       ]
     },
     {
@@ -1930,13 +1962,71 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "GlSF2QJty9qA"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>a</th>\n",
+              "      <th>b</th>\n",
+              "      <th>c</th>\n",
+              "      <th>d</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>3.1</td>\n",
+              "      <td>4.2</td>\n",
+              "      <td>5.2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4.2</td>\n",
+              "      <td>22.3</td>\n",
+              "      <td>346.1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     a    b     c      d\n",
+              "0  1.0  3.1   4.2    5.2\n",
+              "1  2.0  4.2  22.3  346.1"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "..."
+        "p20=pd.read_csv(\"f20.tsv\",sep=\"\\t\")\n",
+        "p20"
       ]
     }
   ],
